# mlsae

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py  tests.py  train.py  upload.py
app/: .eslintrc.json  components.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/app/: layout.tsx  page.tsx  use-select.tsx
app/app/components/: ColorSpan.tsx  Controls.tsx  LatentExamples.tsx  LogitsTable.tsx
app/app/components/prompt/: PromptActivations.tsx  (+5 more)
app/components/ui/: button.tsx  card.tsx  chart.tsx  form.tsx  input.tsx  label.tsx  table.tsx  tabs.tsx  textarea.tsx
app/lib/: api.ts  format.ts  models.ts
figures/: dists_cos_sim_heatmaps.py  dists_heatmaps.py  dists_histograms.py  dists_layer_std.py  embed_cos_sim.py  mmcs.py  prompt_heatmaps.py  resid_cos_sim.py  test.py
mlsae/: utils.py
mlsae/analysis/: dists.py  examples.py  heatmaps.py  variances.py
mlsae/api/: __main__.py  analyser.py  models.py
mlsae/metrics/: __init__.py  auxiliary_loss.py  dead_latents.py  layerwise.py  layerwise_fvu.py  layerwise_l0_norm.py  layerwise_l1_norm.py  layerwise_logit_kl_div.py  layerwise_logit_mse.py  layerwise_loss_delta.py  layerwise_mse.py  mse_loss.py
mlsae/model/: __init__.py  autoencoder.py  data.py  decoder.py  geom_median.py  kernels.py  lightning.py  transformer.py  types.py
mlsae/trainer/: __init__.py  config.py  test.py  train.py
tests/metrics/: test_dead_latents.py  test_layerwise_fvu.py  test_layerwise_l0_norm.py  test_layerwise_l1_norm.py  test_layerwise_mse.py  test_loss_mse.py
(+2 files in other folders)
